--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=MovieBackend
+
+# --- Veritaban? Ba?lant?s? ---
+spring.datasource.url=jdbc:postgresql://localhost:5433/moviedb
+spring.datasource.username=myuser
+spring.datasource.password=12345
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# --- JPA---
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
