--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
+
+# --- Gemini AI ---
+# GEMINI_API_KEY environment variable must be set
+gemini.api.timeout=30000
