enhanced the prompt even more

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.flyway.locations=classpath:db/migration
 # --- Gemini AI ---
 # GEMINI_API_KEY environment variable must be set
 gemini.api.timeout=30000
+
+# --- TMDB ---
+# TMDB_API_KEY environment variable must be set
