feat(search): update config and error handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ gemini.api.timeout=30000
 
 # --- TMDB ---
 # TMDB_API_KEY environment variable must be set
+
+# --- Movie Quality Filter ---
+movie.quality.min-rating=6.5
+movie.quality.min-votes=1000
