--- a/compose.yaml
+++ b/compose.yaml
@@ -7,3 +7,20 @@ services:
       - 'POSTGRES_USER=myuser'
     ports:
       - '5433:5432'
+
+  redis:
+    image: redis:7-alpine
+    container_name: moviebackend-redis
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  redis_data:
