--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,9 @@ gemini.api.timeout=30000
 # --- Movie Quality Filter ---
 movie.quality.min-rating=6.5
 movie.quality.min-votes=1000
+
+# --- Redis Cache ---
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.timeout=2000ms
+cache.default-ttl-hours=24
