Circuit Breaker added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,19 @@ spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.timeout=2000ms
 cache.default-ttl-hours=24
+
+
+# --- Circuit Breaker (Resilience4j) ---
+# TMDB Circuit Breaker
+resilience4j.circuitbreaker.tmdb.failure-rate-threshold=50
+resilience4j.circuitbreaker.tmdb.minimum-number-of-calls=5
+resilience4j.circuitbreaker.tmdb.wait-duration-in-open-state=30
+resilience4j.circuitbreaker.tmdb.permitted-calls-in-half-open=3
+resilience4j.circuitbreaker.tmdb.sliding-window-size=10
+
+# Gemini Circuit Breaker
+resilience4j.circuitbreaker.gemini.failure-rate-threshold=50
+resilience4j.circuitbreaker.gemini.minimum-number-of-calls=3
+resilience4j.circuitbreaker.gemini.wait-duration-in-open-state=60
+resilience4j.circuitbreaker.gemini.permitted-calls-in-half-open=2
+resilience4j.circuitbreaker.gemini.sliding-window-size=5
