Background Jobs added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,19 @@ resilience4j.circuitbreaker.gemini.minimum-number-of-calls=3
 resilience4j.circuitbreaker.gemini.wait-duration-in-open-state=60
 resilience4j.circuitbreaker.gemini.permitted-calls-in-half-open=2
 resilience4j.circuitbreaker.gemini.sliding-window-size=5
+
+
+# --- Scheduled Jobs ---
+# Daily Suggestion Scheduler
+scheduler.daily-suggestion.enabled=true
+scheduler.daily-suggestion.cron=0 0 6 * * *
+scheduler.daily-suggestion.batch-size=50
+
+# Cache Warm-Up Scheduler
+scheduler.cache-warmup.enabled=true
+scheduler.cache-warmup.interval=14400000
+
+# Token Cleanup Scheduler
+scheduler.token-cleanup.enabled=true
+scheduler.token-cleanup.cron=0 0 3 * * *
+scheduler.token-cleanup.revoked-retention-days=7
