--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=MovieBackend
 
+# --- Security ---
+# Disable default user generation (we use JWT auth)
+spring.security.user.name=disabled
+spring.security.user.password=disabled
+
 # --- Veritaban? Ba?lant?s? ---
 spring.datasource.url=jdbc:postgresql://localhost:5433/moviedb
 spring.datasource.username=myuser
@@ -9,8 +14,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # --- JPA---
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
 
 # --- Flyway ---
 spring.flyway.enabled=true
@@ -32,6 +37,7 @@ movie.quality.min-votes=1000
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.timeout=2000ms
+spring.data.redis.repositories.enabled=false
 cache.default-ttl-hours=24
 
 
