--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,9 @@ spring.security.user.password=disabled
 
 # --- Veritaban? Ba?lant?s? ---
 spring.datasource.url=jdbc:postgresql://localhost:5433/moviedb
-spring.datasource.username=myuser
-spring.datasource.password=12345
+spring.datasource.username=YOUR_DB_USERNAME
+spring.datasource.password=YOUR_DB_PASSWORD
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # --- JPA---
