feat: Add refresh daily suggestions capability

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.security.user.password=disabled
 
 # --- Veritaban? Ba?lant?s? ---
 spring.datasource.url=jdbc:postgresql://localhost:5433/moviedb
-spring.datasource.username=YOUR_DB_USERNAME
-spring.datasource.password=YOUR_DB_PASSWORD
+spring.datasource.username=myuser
+spring.datasource.password=12345
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -72,3 +72,6 @@ scheduler.cache-warmup.interval=14400000
 scheduler.token-cleanup.enabled=true
 scheduler.token-cleanup.cron=0 0 3 * * *
 scheduler.token-cleanup.revoked-retention-days=7
+
+# --- Suggestion Refresh ---
+suggestion.refresh.default-limit=5
