feat: add quality filter for upcoming movies
- Filter out short films (<60 min), documentaries, TV movies
- Require minimum vote count (10) and popularity (5.0)
- Require poster image
- Apply filters at both API and application level

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,3 +75,13 @@ scheduler.token-cleanup.revoked-retention-days=7
 
 # --- Suggestion Refresh ---
 suggestion.refresh.default-limit=5
+
+# --- Upcoming Movies Quality Filter ---
+# Minimum oy sayısı (bilinmeyen filmleri elemek için)
+upcoming.quality.min-vote-count=10
+# Minimum popülerlik skoru
+upcoming.quality.min-popularity=5.0
+# Minimum film süresi (dakika) - kısa filmleri elemek için
+upcoming.quality.min-runtime=60
+# Hariç tutulacak tür ID'leri (99=Documentary, 10770=TV Movie)
+upcoming.quality.excluded-genres=99,10770
